# FLIPKART-PRODUCT-RECOMMENDER-SYSTEM

./: .gitignore  Dockerfile  app.py  flask-deployment.yaml  pyproject.toml  requirements.txt  setup.py
flipkart/: config.py  data_converter.py  data_ingestion.py  rag_chain.py
grafana/: grafana-deployment.yaml
prometheus/: prometheus-configmap.yaml  prometheus-deployment.yaml
scripts/: debug_invoke.py
